packages/kyvernoPolicies/chart/tests/vpol/require-istio-on-namespaces-cel/kyverno-test/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: badnamespace-no-label
---
apiVersion: v1
kind: Namespace
metadata:
  name: badnamespace-disabled
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: goodnamespace-enabled
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: goodnamespace-ambient
  labels:
    istio.io/dataplane-mode: ambient
